[project]
name = "free-yolo"
version = "0.1.0"
description = "Collect, dedupe and surface free resources for learning, using and understanding AI — and catch time-sensitive ones before they expire."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "feedparser>=6.0",
    "requests>=2.31",
]

[project.scripts]
freeyolo = "freeyolo.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["freeyolo*"]
